--- a/source/GithubX.UWP/Views/Controls/UserItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/UserItem.xaml
@@ -1,17 +1,23 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.UserItem"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.Controls.UserItem"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+	d:DesignHeight="300"
+	d:DesignWidth="400"
+	mc:Ignorable="d">
 
-	<toolkit:ImageEx Background="Gray" CornerRadius="6"
-					 Stretch="UniformToFill" PlaceholderStretch="UniformToFill"
-					 PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
-					 Height="82" Width="82" ToolTipService.ToolTip="Simple ToolTip"/>
+	<toolkit:ImageEx
+		Width="82"
+		Height="82"
+		Background="Gray"
+		CornerRadius="6"
+		PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
+		PlaceholderStretch="UniformToFill"
+		Source="{Binding Owner.AvatarUrl}"
+		Stretch="UniformToFill"
+		ToolTipService.ToolTip="{Binding Login}" />
 </UserControl>
