--- a/source/GithubX.UWP/Views/CategoriesPage.xaml
+++ b/source/GithubX.UWP/Views/CategoriesPage.xaml
@@ -1,59 +1,35 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.CategoriesPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.CategoriesPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d">
 	<Grid>
-		<Hub>
-		<HubSection Header="Categories">
-			<DataTemplate>
-				<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
-					 CanDragItems="False" SelectionMode="None" Padding="8" Margin="-8"
-					 ItemsSource="{Binding}">
-					<GridView.ItemsPanel>
-						<ItemsPanelTemplate>
-							<ItemsWrapGrid Orientation="Vertical" />
-						</ItemsPanelTemplate>
-					</GridView.ItemsPanel>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-					<ctrl:CategoryItem/>
-				</GridView>
-			</DataTemplate>
-		</HubSection>
-	</Hub>
-		<Button Content="+" FontSize="32" Padding="0 -10 0 0"
-				Style="{StaticResource CircleButtonStyle}" Margin="24" Width="52" Height="52"
-				VerticalAlignment="Bottom" Foreground="White" Background="#FF44BD32"
-				HorizontalAlignment="Right"/>
+		<GridView
+			Header="Categories"
+			ItemsSource="{x:Bind categories}"
+			Style="{ThemeResource MainGridView}">
+			<GridView.ItemTemplate>
+				<DataTemplate>
+					<ctrl:CategoryItem />
+				</DataTemplate>
+			</GridView.ItemTemplate>
+		</GridView>
+		<Button
+			Width="52"
+			Height="52"
+			Margin="24"
+			Padding="0,-10,0,0"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Bottom"
+			Background="#FF44BD32"
+			Click="Add_Click"
+			Content="+"
+			FontSize="32"
+			Foreground="White"
+			Style="{StaticResource CircleButtonStyle}" />
 	</Grid>
 </Page>
