--- a/source/GithubX.UWP/Views/Controls/CategoryItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/CategoryItem.xaml
@@ -1,28 +1,45 @@
 ﻿<UserControl
-    x:Class="GithubX.UWP.Views.Controls.CategoryItem"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.Controls.CategoryItem"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
-	mc:Ignorable="d" 
-    d:DesignHeight="300"
-    d:DesignWidth="400">
-
+	d:DesignHeight="300"
+	d:DesignWidth="400"
+	mc:Ignorable="d">
 	<toolkit:DropShadowPanel Style="{StaticResource ShadowCard}">
-		<StackPanel Style="{StaticResource CardStack}" Orientation="Horizontal" RequestedTheme="Dark">
+		<StackPanel
+			Orientation="Horizontal"
+			RequestedTheme="Dark"
+			Style="{StaticResource CardStack}">
 			<StackPanel.Background>
-				<LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
-					<GradientStop Color="#5B247A"/>
-					<GradientStop Color="#1BCEDF" Offset="1"/>
+				<LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+					<GradientStop Color="{Binding Background.Color1}" />
+					<GradientStop Offset="1" Color="{Binding Background.Color2}" />
 				</LinearGradientBrush>
 			</StackPanel.Background>
-			<TextBlock Text="❤" FontSize="36" Margin="4 8" VerticalAlignment="Center"/>
-			<TextBlock FontWeight="SemiBold" Width="120" MaxLines="1" FontSize="22"
-					   VerticalAlignment="Center" Text="Favorites" FontFamily="Candara"/>
-			<Button Content="" FontFamily="Segoe MDL2 Assets" Background="Transparent" VerticalAlignment="Center"
-					Style="{StaticResource CircleButtonStyle}" HorizontalAlignment="Right"/>
+			<TextBlock
+				Margin="4,8"
+				VerticalAlignment="Center"
+				FontSize="36"
+				Text="{Binding Icon}" />
+			<TextBlock
+				Width="120"
+				VerticalAlignment="Center"
+				FontFamily="Candara"
+				FontSize="22"
+				FontWeight="SemiBold"
+				MaxLines="1"
+				Text="{Binding Title}" />
+			<Button
+				HorizontalAlignment="Right"
+				VerticalAlignment="Center"
+				Background="Transparent"
+				Content=""
+				FontFamily="/Assets/Files/devicon.ttf#devicon"
+				Style="{StaticResource CircleButtonStyle}" />
 		</StackPanel>
 	</toolkit:DropShadowPanel>
 </UserControl>
