--- a/source/GithubX.UWP/Views/FollowPage.xaml
+++ b/source/GithubX.UWP/Views/FollowPage.xaml
@@ -1,55 +1,20 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.FollowPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.FollowPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d">
-	<Grid>
-		<Hub>
-			<HubSection Header="TAG}">
-				<DataTemplate>
-					<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
-					 CanDragItems="False" SelectionMode="None" Padding="8" Margin="-8"
-					 ItemsSource="{Binding}">
-						<GridView.ItemsPanel>
-							<ItemsPanelTemplate>
-								<ItemsWrapGrid Orientation="Vertical" />
-							</ItemsPanelTemplate>
-						</GridView.ItemsPanel>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-						<ctrl:UserItem/>
-					</GridView>
-				</DataTemplate>
-			</HubSection>
-		</Hub>
-	</Grid>
+	<GridView
+		Header="{x:Bind Title}"
+		ItemsSource="{x:Bind users}"
+		Style="{StaticResource MainGridView}">
+		<GridView.ItemTemplate>
+			<DataTemplate>
+				<ctrl:UserItem />
+			</DataTemplate>
+		</GridView.ItemTemplate>
+	</GridView>
 </Page>
