--- a/source/GithubX.UWP/Views/ProfilePage.xaml
+++ b/source/GithubX.UWP/Views/ProfilePage.xaml
@@ -1,68 +1,86 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.ProfilePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:ctrl="using:GithubX.UWP.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.ProfilePage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:conv="using:GithubX.UWP.Converters"
+	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:octo="using:Octokit"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	Loaded="Page_Loaded"
 	NavigationCacheMode="Enabled"
-	mc:Ignorable="d" Loaded="Page_Loaded">
+	mc:Ignorable="d">
+	<Page.Resources>
+		<conv:StringConcatConverter x:Key="StringConcatConverter" x:Name="StringConcatConverter" />
+	</Page.Resources>
 	<Hub>
-		<HubSection Header="Profile" Width="{ThemeResource DefaultWidth}" 
-					HorizontalContentAlignment="Stretch"
-					Background="{ThemeResource SystemRevealListMediumColor}">
+		<HubSection
+			Width="{ThemeResource DefaultWidth}"
+			HorizontalContentAlignment="Stretch"
+			Background="{ThemeResource SystemRevealListMediumColor}"
+			Header="Profile">
 			<DataTemplate>
 				<StackPanel>
-					<toolkit:ImageEx Margin="0" Background="Gray" CornerRadius="6"
-									 Stretch="UniformToFill" PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
-									 HorizontalAlignment="Left" Height="140" Width="140"/>
-					<RichTextBlock Margin="0 4" FontFamily="Candara">
+					<toolkit:ImageEx
+						Width="140"
+						Height="140"
+						Margin="0"
+						HorizontalAlignment="Left"
+						Background="Gray"
+						CornerRadius="6"
+						PlaceholderSource="ms-appx:///Assets/Files/Placeholder.png"
+						Source="{Binding user.AvatarUrl}"
+						Stretch="UniformToFill" />
+					<RichTextBlock Margin="0,4" IsTextSelectionEnabled="False" FontFamily="Candara">
 						<Paragraph FontSize="26">
-							<Bold>Shahriar</Bold>
+							<Run FontWeight="Bold" Text="{Binding user.Name}" />
 						</Paragraph>
 						<Paragraph FontSize="20">
-							yazdipour
+							<Run Text="{Binding user.Login}" />
 						</Paragraph>
-						<Paragraph Margin="0 16">
-							Software Developer at Hell
-						</Paragraph>
-						<Paragraph>
-							🏪 @GitiFarazPishro
+						<Paragraph Margin="0,16">
+							<Run Text="{Binding user.Bio}" />
 						</Paragraph>
 						<Paragraph>
-							🗺 Iran
+							🏪<Run Text="{Binding user.Company}" />
 						</Paragraph>
 						<Paragraph>
-							✉
-							<Hyperlink NavigateUri="mailto:">yazdipour@outlook.com</Hyperlink>
+							🗺<Run Text="{Binding user.Location}" />
 						</Paragraph>
 						<Paragraph>
-							🌐
-							<Hyperlink NavigateUri="0">https://yazdipour.github.io</Hyperlink>
+							✉<Hyperlink NavigateUri="{Binding user.Email, Converter={StaticResource StringConcatConverter}, ConverterParameter='mailto:', ConverterLanguage='End'}">
+								<Run Text="{Binding user.Email}" />
+							</Hyperlink>
+						</Paragraph>
+						<Paragraph>
+							🌐<Hyperlink NavigateUri="0">
+								<Run Text="{Binding user.Blog}" />
+							</Hyperlink>
 						</Paragraph>
 					</RichTextBlock>
-					<Button CornerRadius="2" Content="Logout" Click="Logout_Clicked"
-							HorizontalAlignment="Center" Margin="0 32 0 0"
-							RequestedTheme="Dark" Background="{ThemeResource RedPigment}"/>
+					<Button
+						Margin="0,32,0,0"
+						HorizontalAlignment="Center"
+						Background="{ThemeResource RedPigment}"
+						Click="Logout_Clicked"
+						Content="Logout"
+						CornerRadius="2"
+						RequestedTheme="Dark" />
 				</StackPanel>
 			</DataTemplate>
 		</HubSection>
 		<HubSection Header="Notification">
 			<DataTemplate>
-				<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
-					 CanDragItems="False" SelectionMode="None" Padding="8" Margin="-8"
-					 ItemClick="Notification_ItemClick" ItemsSource="{Binding}">
-					<GridView.ItemsPanel>
-						<ItemsPanelTemplate>
-							<ItemsWrapGrid Orientation="Vertical" />
-						</ItemsPanelTemplate>
-					</GridView.ItemsPanel>
+				<GridView
+					ItemClick="Notification_ItemClick"
+					ItemsSource="{Binding notifications}"
+					Style="{StaticResource MainGridView}">
 					<GridView.ItemTemplate>
 						<DataTemplate>
 							<StackPanel>
-								<ctrl:NotificationItem/>
+								<ctrl:NotificationItem />
 							</StackPanel>
 						</DataTemplate>
 					</GridView.ItemTemplate>
