--- a/source/GithubX.UWP/Views/RepositoriesPage.xaml
+++ b/source/GithubX.UWP/Views/RepositoriesPage.xaml
@@ -1,53 +1,17 @@
 ﻿<Page
-    x:Class="GithubX.UWP.Views.RepositoriesPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GithubX.UWP.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="GithubX.UWP.Views.RepositoriesPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:GithubX.UWP.Views"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d">
-	<Hub>
-		<HubSection Header="Tag}">
+	<GridView ItemsSource="{x:Bind repositories}" Style="{StaticResource MainGridView}">
+		<GridView.ItemTemplate>
 			<DataTemplate>
-				<GridView IsItemClickEnabled="True" IsSwipeEnabled="True"
-					 CanDragItems="False" SelectionMode="None" Padding="8" Margin="-8"
-					 ItemsSource="{Binding}">
-					<GridView.ItemsPanel>
-						<ItemsPanelTemplate>
-							<ItemsWrapGrid Orientation="Vertical" />
-						</ItemsPanelTemplate>
-					</GridView.ItemsPanel>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-					<ctrl:RepositoryItem/>
-				</GridView>
+				<ctrl:RepositoryItem />
 			</DataTemplate>
-		</HubSection>
-	</Hub>
+		</GridView.ItemTemplate>
+	</GridView>
 </Page>
