Done Basics of HelpPage

--- a/source/GithubX.UWP/Views/AddCategoryDialog.xaml
+++ b/source/GithubX.UWP/Views/AddCategoryDialog.xaml
@@ -1,10 +1,10 @@
 ﻿<ContentDialog
-	x:Class="GithubX.UWP.Views.Dialogs.AddCategoryDialog"
+	x:Class="GithubX.UWP.Views.AddCategoryDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="using:GithubX.UWP.Views.Dialogs"
+	xmlns:local="using:GithubX.UWP.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:mdl="using:GithubX.Shared.Models"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -23,6 +23,7 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<TextBlock
 			Grid.Row="0"
@@ -206,5 +207,17 @@
 				</Grid>
 			</PivotItem>
 		</Pivot>
+
+		<Button
+			Grid.Row="2"
+			Grid.ColumnSpan="2"
+			HorizontalAlignment="Stretch"
+			Background="{ThemeResource RedPigment}"
+			RequestedTheme="Dark">
+			<StackPanel Orientation="Horizontal">
+				<SymbolIcon Margin="16,0" Symbol="Delete" />
+				<TextBlock Text="Remove" />
+			</StackPanel>
+		</Button>
 	</Grid>
 </ContentDialog>
