--- a/source/GithubX.UWP/Views/MarkdownPage.xaml
+++ b/source/GithubX.UWP/Views/MarkdownPage.xaml
@@ -5,6 +5,10 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	Loaded="Page_Loaded"
 	mc:Ignorable="d">
-	<toolkit:MarkdownTextBlock Background="Transparent" Padding="16,32" Text="# Help" />
+	<toolkit:MarkdownTextBlock
+		x:Name="markdownTextBlock"
+		Padding="16,32"
+		Background="Transparent" />
 </Page>
