--- a/source/GithubX.UWP/Views/MotherPage.xaml
+++ b/source/GithubX.UWP/Views/MotherPage.xaml
@@ -53,6 +53,13 @@
 				PaneDisplayMode="Top"
 				SelectionChanged="NavigationView_SelectionChanged"
 				SelectionFollowsFocus="Enabled">
+				<media:NavigationView.AutoSuggestBox>
+					<media:AutoSuggestBox
+						Width="160"
+						PlaceholderText="Repository Search"
+						QueryIcon="Find"
+						QuerySubmitted="RepoSearch_QuerySubmitted" />
+				</media:NavigationView.AutoSuggestBox>
 				<media:Frame x:Name="iframe" Background="{ThemeResource SystemRevealListLowColor}" />
 			</media:NavigationView>
 		</media:Grid>
