--- a/source/GithubX.UWP/Views/MarkdownPage.xaml
+++ b/source/GithubX.UWP/Views/MarkdownPage.xaml
@@ -10,5 +10,6 @@
 	<toolkit:MarkdownTextBlock
 		x:Name="markdownTextBlock"
 		Padding="16,32"
+		LinkClicked="markdownTextBlock_LinkClicked"
 		Background="Transparent" />
 </Page>
