--- a/source/GithubX.UWP/Views/LoginPage.xaml
+++ b/source/GithubX.UWP/Views/LoginPage.xaml
@@ -4,8 +4,14 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
 	xmlns:local="using:GithubX.UWP.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	extensions:ApplicationViewExtensions.ExtendViewIntoTitleBar="True"
+	extensions:TitleBarExtensions.BackgroundColor="Transparent"
+	extensions:TitleBarExtensions.ButtonBackgroundColor="Transparent"
+	extensions:TitleBarExtensions.ButtonForegroundColor="White"
+	extensions:TitleBarExtensions.ForegroundColor="White"
 	Background="{StaticResource BodyAcrylicBackgroundBrush}"
 	Loading="Page_Loading"
 	mc:Ignorable="d">
@@ -13,6 +19,7 @@
 		<Style TargetType="TextBlock">
 			<Setter Property="FontWeight" Value="Light" />
 			<Setter Property="HorizontalAlignment" Value="Center" />
+			<Setter Property="RequestedTheme" Value="Light" />
 		</Style>
 	</Page.Resources>
 	<Grid>
