--- a/source/GithubX.UWP/Views/GistsPage.xaml
+++ b/source/GithubX.UWP/Views/GistsPage.xaml
@@ -6,14 +6,14 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="using:GithubX.UWP.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:octo="using:Octokit"
 	mc:Ignorable="d">
 	<GridView
-		Header="Gists"
 		ItemClick="GridView_ItemClick"
 		ItemsSource="{x:Bind gists}"
 		Style="{StaticResource MainGridView}">
 		<GridView.ItemTemplate>
-			<DataTemplate>
+			<DataTemplate x:DataType="octo:Gist">
 				<ctrl:GistItem />
 			</DataTemplate>
 		</GridView.ItemTemplate>
